# adachi-cube

./: .gitignore  README.md
bot/: Cargo.toml  config.toml.template
bot/src/: analytics.rs  commands.rs  config.rs  folders.rs  main.rs
models/: adachi_cube_model.mtl  stairs.scad  stairs.stl
scenes/: avatar_scene.blend  avatar_scene.blend1  cube_false_1.blend  cube_false_1.blend1  cube_maybe_1.blend  cube_true_1.blend  physics_stairs_scene.blend  physics_stairs_scene.blend1  physics_stairs_scene1.blend  test_scene.blend  test_scene.blend1
textures/: adachi_cube_texture.xcf  adachi_true.xcf
tools/: Dockerfile  build_docker.sh  render_all.sh
