[package]
name = "adachi-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb = "0.7.2"
poise = "0.6.1"
serde = { version = "1.0.196", features = ["derive"]}
serenity = "0.12.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "default"]}
toml = "0.8.10"
